--- a/lib/views/product-detail.hbs
+++ b/lib/views/product-detail.hbs
@@ -1,3 +1,3 @@
 <div class="product-detail">
-    <h3 class="product-summary-name">{{product_name}}<h3>
+    <h3 class="product-summary-name">{{product.name}}<h3>
 </div>
