Adding 3 columns and browsing the products

--- a/lib/views/index.hbs
+++ b/lib/views/index.hbs
@@ -1,5 +1,6 @@
-{{#each products}}
-    {{> summary}}
-
-{{/each}}
+<div class="row text-center">
+    {{#each products}}
+        {{> summary}}
+    {{/each}}
+</div>
 <a href="/bell-fb">Log in with Facebook</a>
