--- a/lib/views/create-product.hbs
+++ b/lib/views/create-product.hbs
@@ -27,6 +27,18 @@
             <label for="prices">Price</label>
             <input type="number" class="form-control" name="price" />
         </div>
+        <div class="form-group">
+            <label for="review">Review</label>
+            <input type="number" class="form-control" name="review" />
+        </div>
+        <div class="form-group">
+            <label for="comment">Comment</label>
+            <input type="text" class="form-control" name="comment" />
+        </div>
+        <div class="form-group">
+            <label for="business_info">Bussines Information</label>
+            <input type="text" class="form-control" name="business_info" />
+        </div>
 
         <div class="form-group">
 			<input type="submit" class="btn btn-default" value="Submit">
