--- a/lib/views/partials/summary.hbs
+++ b/lib/views/partials/summary.hbs
@@ -1,4 +1,14 @@
-<a class="product-summary" href="/product/{{_id}}">
-    <h3 class="product-summary-name">{{name}}</h3>
-    <h6>Requires:{{requires}}</h6>
-</a>
+<div class="col-md-3 col-sm-6 hero-feature">
+    <div class="thumbnail">
+        <img src="http://placehold.it/800x500" alt="">
+        <div class="caption">
+            <div class="caption">
+                <h3 class="product-summary-name">{{name}}</h3>
+                <p>
+                    <a href="/product/{{_id}}" class="btn btn-primary">Buy Now!</a> <a href="/product/{{_id}}" class="btn btn-default">More Info</a>
+                </p>
+                <h6>Requires:{{requires}}</h6>
+            </div>
+        </div>
+    </div>
+</div>
