--- a/lib/views/product-detail.hbs
+++ b/lib/views/product-detail.hbs
@@ -1,3 +1,15 @@
-<div class="product-detail">
-    <h3 class="product-summary-name">{{product.name}}<h3>
+<div class="thumbnail">
+    <img src="http://placehold.it/800x500" style="height:250px;" alt="">
+    <div class="caption">
+        <div class="product-detail">
+            <h3 class="product-summary-name">Producto: {{product.name}}<h3>
+            <h3 class="product-summary-name">Description: {{product.description}}<h3>
+            <h5 class="product-summary-name">Price: {{product.price}}<h5>
+            <h5 class="product-summary-name">Reviews: {{product.review}}<h5>
+            <h5>Descuento: {{product.discount}}</h5>
+            <h5>Horarios : {{product.business_info}}</h5>
+        </div>
+
+        <p><a href="/product/{{_id}}" class="btn btn-primary">Buy Now!</a></p>
+    </div>
 </div>
