--- a/lib/views/layout/layout.hbs
+++ b/lib/views/layout/layout.hbs
@@ -9,9 +9,14 @@
     <meta name="author" content="">
 
     <title>easly </title>
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.3/jquery.timepicker.min.js"></script>
     <link href="/public/css/main.css" rel="stylesheet">
     <link href="/public/css/heroic-features.css" rel="stylesheet">
     <link href="/public/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.3/jquery.timepicker.min.css">
     <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
 
 </head>
@@ -68,5 +73,8 @@
             <p class="text-muted">Cuarto piso Productions &copy; 2016</p>
       </div>
     </footer>
+
+
+
 </body>
 </html>
