Browser product problem #13

--- a/lib/views/reservation.hbs
+++ b/lib/views/reservation.hbs
@@ -3,11 +3,11 @@
     <div class="caption">
         <div class="product-detail">
             <h3 class="product-summary-name">Producto: {{product.name}}<h3>
-            <h3 class="product-summary-name">Description: {{product.description}}<h3>
+            <!-- <h3 class="product-summary-name">Description: {{product.description}}<h3>
             <h5 class="product-summary-name">Price: {{product.price}}<h5>
             <h5 class="product-summary-name">Reviews: {{product.review}}<h5>
             <h5>Descuento: {{product.discount}}</h5>
-            <h5>Horarios : {{product.business_info}}</h5>
+            <h5>Horarios : {{product.business_info}}</h5> -->
         </div>
 
         <h2>Selecione su fecha</h2>
