--- a/lib/views/partials/summary.hbs
+++ b/lib/views/partials/summary.hbs
@@ -5,7 +5,7 @@
             <div class="caption">
                 <h3 class="product-summary-name">{{name}}</h3>
                 <p>
-                    <a href="/reservation/{{_id}}" class="btn btn-primary">Buy Now!</a> <a href="/product/{{_id}}" class="btn btn-default">More Info</a>
+                    <a href="/service/{{_id}}" class="btn btn-primary">Buy Now!</a> <a href="/service/{{_id}}" class="btn btn-default">More Info</a>
                 </p>
                 <h6>Requires:{{requires}}</h6>
             </div>
