--- a/lib/views/partials/productdetails.hbs
+++ b/lib/views/partials/productdetails.hbs
@@ -9,9 +9,12 @@
         <h5>Horarios : {{business_info}}</h5>
     </div>
 
-    <!-- <h2>Selecione su fecha</h2> -->
+    <a href="/service/getvendors/{{_id}}" class="btn btn-primary">Buy Now!</a>
 
-    <!-- <form name="rsvp" id="rsvp" method="post">
+    <!-- <h4>Selecione su fecha</h4>
+
+    <form name="rsvp" id="rsvp" method="post">
+        <input type="hidden" name="productId" value="{{_id}}">
         <p>fecha: <input type="text" id="datepicker" name="datepicker"></p>
         <p>Hora : <input type="text" id="timepicker" name="timepicker" /></p>
 
